--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,35 @@
-html, body{
+html{
   height: 100%;
-  background: rgb(139,58,132);
 }
+body{
+  background: rgb(139,58,132);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+
 .logo-container{
   background: rgb(52,3,47);
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .agri-logo{
-    margin: 0 auto;
-    width: 100%;
+    width: 50%;
+}
+.row1{
+  width: 100%;
+}
+.row1.1{
+  width:50%;
+}
+.row1.2{
+  width: 50%;
+}
+.row2{
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
 }
