--- a/styles.css
+++ b/styles.css
@@ -7,15 +7,16 @@ body{
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-
 }
 
-.row1{
+.row1 {
     display: flex;
-  width: 100%;
-}
+    width: 100%;
+    justify-content: space-between;
+  }
+
 .row1.1{
-    display: flex;
+  display: flex;
   width:50%;
 }
 .row1.2{
@@ -23,14 +24,12 @@ body{
   width: 50%;
 }
 .row2{
-
   display: flex;
   width: 100%;
   justify-content: space-around;
 }
 .logo-container{
   display: flex;
-  background: rgb(52,3,47
   justify-content: center;
   align-items: center;
 }
