--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,22 @@
 html{
-  height: 100%;
+
 }
 body{
-  height: 100%;
-  background: rgb(139,58,132);
+  background: white;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
+}
+
+.logo-container{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.agri-logo{
+  display: block;
 }
 
 .row1 {
@@ -15,26 +25,8 @@ body{
     justify-content: space-between;
   }
 
-.row1.1{
-  display: flex;
-  width:50%;
-}
-.row1.2{
-    display: flex;
-  width: 50%;
-}
 .row2{
   display: flex;
   width: 100%;
   justify-content: space-around;
-}
-.logo-container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.agri-logo{
-    width: 50%;
-    height: auto;
 }
